# pydantic-docs

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: CNAME
docs/examples/: models_orm_mode.py
requirements/: all.txt  docs.in
site/: 404.html  index.html  objects.inv  sitemap.xml
site/blog/pydantic-v2/: index.html
site/changelog/: index.html
site/contributing/: index.html
site/datamodel_code_generator/: index.html
site/hypothesis_plugin/: index.html
site/install/: index.html
site/internals/: index.html
site/mypy_plugin/: index.html
site/pycharm_plugin/: index.html
site/search/: search_index.json
site/types/boolean/: index.html
site/types/custom/: index.html
site/types/datetime/: index.html
site/types/dict/: index.html
site/types/inspection/: index.html
site/types/numeric/: index.html
site/types/other/: index.html
site/types/sequence/: index.html
site/types/string/: index.html
site/usage/: index.html
site/usage/dataclasses/: index.html
site/usage/devtools/: index.html
site/usage/exporting_models/: index.html
site/usage/model_config/: index.html
site/usage/models/: index.html
site/usage/mypy/: index.html
site/usage/postponed_annotations/: index.html
site/usage/rich/: index.html
site/usage/schema/: index.html
site/usage/types/: index.html
site/usage/validation_decorator/: index.html
site/usage/validators/: index.html
site/visual_studio_code/: index.html
src/pydantic_docs/: __main__.py  cli.py  mkdocs.pydantic.yml  plugin.py
src/pydantic_docs/mdext/: __init__.py  public_trace.py  versioning.py
